--- a/src/app/components/modals/payment/payment.component.scss
+++ b/src/app/components/modals/payment/payment.component.scss
@@ -1,14 +1,15 @@
 .first-col{
     text-align: center;   
 }
-
+span,p{
+    font-size: 16px;
+}
 .padding-modal{
     background: white;
-    //padding: 15% 0% 0% 0%;
     display: grid;
     align-items: center;
-    height: 340px;
-    bottom: 0px;
+    height: 100%;
+    //bottom: px;
     width: 100%;
     border-radius: 5% 5% 0 0;
     position: fixed;
@@ -47,6 +48,7 @@
     position: relative;
     left: calc( (100% - 60px) / 2 );
     border-radius: 50%;
+    bottom: -30px;
     z-index: 2;
 }
 
@@ -57,4 +59,26 @@
 }
 .main-view{
   --background: transparent;
+}
+
+@media (min-width:1023px) and (max-width:1024px){
+    .iconPosition{
+        height: 120px;
+        width: 120px;
+        left: calc( (100% - 120px) / 2 );
+        bottom: -60px;
+    }
+    .card-day{
+        font-size: 55px;
+    }
+    .subtitle-text{
+        font-size: 37px !important;
+    }
+    span,p{
+        font-size: 29px;
+    }
+    .icon-card{
+        height: 100px;
+        width: 100px;
+    }
 }
