--- a/src/app/components/modals/pending-loan/pending-loan.component.scss
+++ b/src/app/components/modals/pending-loan/pending-loan.component.scss
@@ -1,5 +1,6 @@
 .title-text{
     color:#7D7D7D;
+    font-size: 14px;
 }
 
 .subtitle-text{
@@ -18,9 +19,26 @@
 
 .title{
     color: white;
+    font-size: 28px;
 }
 
 .monto-text{
     color: white;
     font-size: 24px !important;
+}
+
+@media (min-width:1023px) and (max-width:1024px){
+    .monto-text{
+        font-size: 37px !important;
+    }
+    .subtitle-text{
+        font-size: 32px !important;
+    }
+    .title{
+        color: white;
+        font-size: 40px;
+    }
+    .title-text{
+        font-size: 26px;
+    }
 }
