--- a/src/app/components/validation-errors/validation-errors.component.scss
+++ b/src/app/components/validation-errors/validation-errors.component.scss
@@ -3,3 +3,9 @@
     --ion-default-font: "roboto";
     font-size: 14px !important;
 }
+
+@media (min-width:1023px) and (max-width:1024px){
+    .error-message {
+        font-size: 23px !important;
+    }
+}
