--- a/src/app/pages/calendar/calendar.page.html
+++ b/src/app/pages/calendar/calendar.page.html
@@ -22,7 +22,7 @@
   </ion-item>
 
   <ng-template  #template let-view="view"  let-row="row" let-col="col" >
-    <div class="center-days" *ngIf="view.dates[row*7+col].events.length==0" style="min-height: 45px">
+    <div class="center-days days-sin-event" *ngIf="view.dates[row*7+col].events.length==0">
       {{view.dates[row*7+col].label}}
     </div>
     <div *ngFor="let obj of view.dates[row*7+col].events">
