--- a/src/app/pages/reset-password/reset-password.page.scss
+++ b/src/app/pages/reset-password/reset-password.page.scss
@@ -1,3 +1,16 @@
 .mayus{
     text-transform: uppercase;
 }
+
+.size-icon{
+    width: 30px;
+    height: 30px; 
+}
+
+@media (min-width:1023px) and (max-width:1024px){
+
+    .size-icon{
+        width: 40px;
+        height: 40px;
+    }
+}
