--- a/src/global.scss
+++ b/src/global.scss
@@ -102,27 +102,27 @@ ion-list.background{
     --color: black;
 }
 
-.alert-input.sc-ion-alert-md{
+.alert-input{
     border-color:  #B1C800 !important;
-    text-align: center;
-    font-size: 15px;
+    text-align: center !important;
+    font-size: 15px !important;
 }
 
 .alertcss{ 
     --max-width: 90%;
 }
 
-.alert-message.sc-ion-alert-md{
-    color:#0552AF;
+.alert-message{
+    color:#0552AF !important;
 }
 
-.alert-sub-title.sc-ion-alert-md{
-    color:#0A4388;
+.alert-sub-title{
+    color:#0A4388 !important;
     text-align: center;
 }
 
-.alert-title.sc-ion-alert-md{
-    color:#043C80;
+.alert-title{
+    color:#043C80 !important;
     text-align: center;
 }
 
@@ -160,6 +160,10 @@ calendar{
     .monthview-container{
         height: 58% !important;
     }
+    .monthview-datetable td{
+        height: 50px !important;
+        font-size: 18px;
+    }
     .monthview-datetable td.monthview-primary-with-event{
         padding: 0 !important;
         background-color: transparent !important;
@@ -179,11 +183,27 @@ calendar{
     .text-muted{
         visibility: hidden;
     }
+    thead{
+        font-size: 18px;
+    }
+    td{
+        min-height: 80px !important;
+    }
+    @media (min-width:1023px) and (max-width:1024px){
+        thead{
+            font-size: 40px;
+        }
+        .monthview-datetable td{
+            font-size: 30px;
+            height: 85px !important;
+        }
+    } 
 }
 
 
 .size-modal{
     --height:45%;
+    --width: 100%;
     align-items: flex-end;
     --background: transparent;
 }
@@ -208,4 +228,40 @@ calendar{
         color: black;
     }
 }
-  
+
+.size-input{
+    font-size: 18px;
+}
+
+.size-btn{
+    font-size: 16px;
+}
+
+@media (min-width:1023px) and (max-width:1024px){
+    ion-label {
+        font-size: 30px !important;
+    }
+    .size-input{
+        font-size: 30px !important;
+    }
+    .size-btn{
+        font-size: 27px !important;
+    }
+    .icono-centrado{
+        padding-top: 44px;
+    }
+    .alert-message{
+        font-size: 27px !important;
+    }
+    
+    .alert-sub-title{
+        font-size: 28px !important;
+    }
+    
+    .alert-title{
+        font-size: 30px !important;
+    }
+    .padding-btn{
+        padding: 35px;
+    }
+}
