Cambios de las Targetas

--- a/src/app/components/cards-loan/cards-loan.component.scss
+++ b/src/app/components/cards-loan/cards-loan.component.scss
@@ -3,8 +3,8 @@
 }
 
 .cards{
-  width: 19.63rem;
-  height: 8.71rem;
+  width: 19.71rem;  //19.63
+  height: 8.75rem;  //8.71
 }
 .ion-slide{
   margin-bottom: 27px!important;
@@ -16,7 +16,7 @@
   --bullet-background-active:#FFFF;
 }
 .date-limit{
-  font-size: .87rem!important;
+  font-size: .81rem!important;
   text-transform: uppercase;
 }
 h2{
