--- a/src/app/components/cards-loan/cards-loan.component.html
+++ b/src/app/components/cards-loan/cards-loan.component.html
@@ -7,8 +7,8 @@
             <h3 class="ion-text-left">{{'TOTALBALANCE' | translate}}</h3>
             <p class="ion-text-left">{{item.saldo_total | currency}}</p>
             <h3 class="ion-text-left">{{'BALANCETONOTGENERATEINTEREST' | translate}}</h3>
-            <p class="ion-text-left">{{item.saldo_vencido | currency}}</p>
-            <h3 *ngIf="item.status==300" class="ion-text-left">{{'PAYDAY LIMIT' | translate}} &nbsp;&nbsp;&nbsp;<ion-label class="date-limit">{{item.vencido_desde | date: 'EEEE'}}, {{item.vencido_desde | date: 'dd/MM/yyyy'}}</ion-label></h3>
+            <p class="ion-text-left">{{ item.cuota | currency}}</p>
+            <h3 *ngIf="proximosPagos.length>0" class="ion-text-left">{{'PAYDAYLIMIT' | translate}} &nbsp;&nbsp;<ion-label class="date-limit">{{proximosPagos[i].fechaProximoPago | date: 'EEEE'}}, {{proximosPagos[i].fechaProximoPago | date: 'dd/MM/yyyy'}}</ion-label></h3>
           </ion-label>   
         </ion-label>
       </ion-card>
