traduccion de las cards de los movimientos

--- a/src/app/components/payment-cards/payment-cards.component.html
+++ b/src/app/components/payment-cards/payment-cards.component.html
@@ -22,8 +22,8 @@
         <ion-item style="--background:#F7F7F7;" lines="none">
           <ion-icon class="icon-card" style="color:#0652AF" slot="start" name="globe"></ion-icon>
           <label>
-            <span class="title-card">{{l.tipo_nom}}</span><br>
-            <span class="body-card">{{l.mensaje}}</span>
+            <span class="title-card">{{'LOANREP' | translate}}</span><br>
+            <span class="body-card">{{'LOANREPSMS' | translate}}</span>
           </label>
           <label slot="end">
             <span class="price-card" style="color:#0652AF">{{l.importe | currency}}</span><br>
@@ -33,13 +33,13 @@
       </ion-card-content>
     </ion-card>
 
-    <ion-card *ngIf='l.tipo=="SAVDEP" || l.tipo=="LOANSUB"' class="payment-cards payment-cards-yellow">
+    <ion-card *ngIf='l.tipo=="LOANSUB"' class="payment-cards payment-cards-yellow">
       <ion-card-content class="ion-no-padding">
         <ion-item style="--background:#F7F7F7;" lines="none">
           <ion-icon class="icon-card" style="color:#DBD460" slot="start" name="globe"></ion-icon>
           <label>
-            <span class="title-card">{{l.tipo_nom}}</span><br>
-            <span class="body-card">{{l.mensaje}}</span>
+            <span class="title-card">{{'LOANSUB' | translate}}</span><br>
+            <span class="body-card">{{'LOANSUBSMS' | translate}}</span>
           </label>
           <label slot="end">
             <span class="price-card" style="color:#DBD460">{{l.importe | currency}}</span><br>
@@ -54,8 +54,24 @@
         <ion-item style="--background:#F7F7F7;" lines="none">
           <ion-icon class="icon-card" style="color:#189746" slot="start" name="globe"></ion-icon>
           <label>
-            <span class="title-card">{{l.tipo_nom}}</span><br>
-            <span class="body-card">{{l.mensaje}}</span>
+            <span class="title-card">{{'LOANAPR' | translate}}</span><br>
+            <span class="body-card">{{'LOANAPRSMS' | translate}}</span>
+          </label>
+          <label slot="end">
+            <span class="price-card" style="color:#189746">{{l.importe | currency}}</span><br>
+            <span class="date-card">{{l.fecha_mov | date: 'dd/MM/yyyy'}}</span>
+          </label>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
+
+    <ion-card *ngIf='l.tipo=="LOANDIS"' class="payment-cards payment-cards-green">
+      <ion-card-content class="ion-no-padding">
+        <ion-item style="--background:#F7F7F7;" lines="none">
+          <ion-icon class="icon-card" style="color:#189746" slot="start" name="globe"></ion-icon>
+          <label>
+            <span class="title-card">{{'LOANDIS' | translate}}</span><br>
+            <span class="body-card">{{'LOANDISSMS' | translate}}</span>
           </label>
           <label slot="end">
             <span class="price-card" style="color:#189746">{{l.importe | currency}}</span><br>
