--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -26,10 +26,10 @@
       </ion-list>
   
       <ion-button class="btn-round btn-success size-btn" [disabled]="!form_login.valid" (click)="login()" expand="block">{{'LOGIN' | translate}}</ion-button>
-      <ion-button class="btn-white btn-round size-btn"  style="color:#043C80 !important;" expand="block" disabled>
+      <!-- ion-button class="btn-white btn-round size-btn"  style="color:#043C80 !important;" expand="block" disabled>
         <ion-icon slot="end" name="logo-google"></ion-icon>
         {{'LOGINGOOGLE' | translate}}
-      </ion-button>
+      </ion-button -->
     </form>
 
     <ion-label class="center-label" >{{'ACCESSAPP' | translate}}</ion-label>
