--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <ion-app>
-  <ion-menu side="start" menuId="first" contentId="main">
+  <ion-menu class="my-custom-menu" side="start" menuId="first" contentId="main">
     <ion-header class="ion-no-border">
       <div style="position: absolute;">
         <img class="img" src="/assets/img/img-menu.jpg">
