--- a/src/app/pages/detailloan/detailloan.page.scss
+++ b/src/app/pages/detailloan/detailloan.page.scss
@@ -1,3 +1,15 @@
 ion-toolbar{
     --background: #043C80;
 }
+
+.top{
+    margin-top: -15px!important;
+}
+
+.condicion{
+    margin-top: -20px!important;
+}
+
+ion-item{
+    margin-top: -5px!important;
+}
